--- a/package.json
+++ b/package.json
@@ -4,27 +4,29 @@
     "description": "Node.js Server mit MongoDB-Anbindung",
     "main": "server.js",
     "scripts": {
-      "start": "node server.js",
-      "dev": "nodemon server.js"
+        "start": "node server.js",
+        "dev": "nodemon server.js"
     },
     "keywords": [
-      "node",
-      "express",
-      "mongodb",
-      "api"
+        "node",
+        "express",
+        "mongodb",
+        "api"
     ],
     "author": "",
     "license": "ISC",
     "dependencies": {
-      "body-parser": "^1.20.2",
-      "cors": "^2.8.5",
-      "express": "^4.18.2",
-      "mongoose": "^7.5.0"
+        "body-parser": "^1.20.2",
+        "cors": "^2.8.5",
+        "express": "^4.18.2",
+        "helmet": "^8.0.0",
+        "mongoose": "^7.5.0",
+        "winston": "^3.17.0"
     },
     "devDependencies": {
-      "nodemon": "^3.0.1"
+        "nodemon": "^3.0.1"
     },
     "engines": {
-      "node": ">=14.0.0"
+        "node": ">=14.0.0"
     }
-  }
+}
