--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
     "description": "Node.js Server mit MongoDB-Anbindung",
     "main": "server.js",
     "scripts": {
-        "start": "node server.js",
-        "dev": "nodemon server.js"
+        "start": "NODE_ENV=production node server.js",
+        "dev": "nodemon server.js",
+        "test": "echo \"No tests specified\" && exit 0"
     },
     "keywords": [
         "node",
@@ -27,6 +28,7 @@
         "nodemon": "^3.0.1"
     },
     "engines": {
-        "node": ">=14.0.0"
+        "node": ">=14.0.0",
+        "npm": ">=8.0.0"
     }
 }
