--- a/package.json
+++ b/package.json
@@ -17,14 +17,21 @@
     "author": "",
     "license": "ISC",
     "dependencies": {
+        "bcrypt": "^5.1.1",
         "body-parser": "^1.20.2",
         "cors": "^2.8.5",
+        "crypto": "^1.0.1",
+        "dotenv": "^16.4.7",
         "express": "^4.18.2",
+        "express-rate-limit": "^7.5.0",
         "helmet": "^8.0.0",
+        "jsonwebtoken": "^9.0.2",
         "mongoose": "^7.8.6",
+        "nodemailer": "^6.10.0",
         "winston": "^3.17.0"
     },
     "devDependencies": {
+        "cross-env": "^7.0.3",
         "nodemon": "^3.0.1"
     },
     "engines": {
