--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
         "jsonwebtoken": "^9.0.2",
         "mongoose": "^7.8.6",
         "nodemailer": "^6.10.0",
+        "socket.io": "^4.8.1",
         "winston": "^3.17.0"
     },
     "devDependencies": {
