--- a/package.json
+++ b/package.json
@@ -24,10 +24,12 @@
         "dotenv": "^16.4.7",
         "express": "^4.18.2",
         "express-rate-limit": "^7.5.0",
+        "fs-extra": "^11.3.0",
         "google-auth-library": "^9.15.1",
         "helmet": "^8.0.0",
         "jsonwebtoken": "^9.0.2",
         "mongoose": "^7.8.6",
+        "multer": "^1.4.5-lts.2",
         "nodemailer": "^6.10.0",
         "socket.io": "^4.8.1",
         "winston": "^3.17.0"
